--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="Documentation for the improved TU Delft LaTeX report/thesis and article template. The design principle of these templates is to be simple and extensive.">
     
-    <link rel="preload" href="/assets/css/0.styles.01753a4a.css" as="style"><link rel="preload" href="/assets/js/app.337861c8.js" as="script"><link rel="preload" href="/assets/js/11.b69ec3bd.js" as="script"><link rel="prefetch" href="/assets/js/10.4f28f00b.js"><link rel="prefetch" href="/assets/js/12.94ced838.js"><link rel="prefetch" href="/assets/js/13.6458931d.js"><link rel="prefetch" href="/assets/js/14.708fa080.js"><link rel="prefetch" href="/assets/js/15.d6028464.js"><link rel="prefetch" href="/assets/js/16.33ee87f6.js"><link rel="prefetch" href="/assets/js/17.ac100bc5.js"><link rel="prefetch" href="/assets/js/18.6e883368.js"><link rel="prefetch" href="/assets/js/2.c282783c.js"><link rel="prefetch" href="/assets/js/3.d6dfa7cf.js"><link rel="prefetch" href="/assets/js/4.c4fa1a91.js"><link rel="prefetch" href="/assets/js/5.7bcb5c47.js"><link rel="prefetch" href="/assets/js/6.907abdd2.js"><link rel="prefetch" href="/assets/js/7.b717c588.js"><link rel="prefetch" href="/assets/js/8.24a2d9b9.js"><link rel="prefetch" href="/assets/js/9.22f5d112.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.01753a4a.css">
+    <link rel="preload" href="/assets/css/0.styles.a070add0.css" as="style"><link rel="preload" href="/assets/js/app.be6c14e5.js" as="script"><link rel="preload" href="/assets/js/11.b69ec3bd.js" as="script"><link rel="prefetch" href="/assets/js/10.25b3ddeb.js"><link rel="prefetch" href="/assets/js/12.94ced838.js"><link rel="prefetch" href="/assets/js/13.1927f827.js"><link rel="prefetch" href="/assets/js/14.9f096795.js"><link rel="prefetch" href="/assets/js/15.d071ec25.js"><link rel="prefetch" href="/assets/js/16.9c2360d7.js"><link rel="prefetch" href="/assets/js/17.d65e1454.js"><link rel="prefetch" href="/assets/js/18.7c5970e2.js"><link rel="prefetch" href="/assets/js/2.c282783c.js"><link rel="prefetch" href="/assets/js/3.2141006a.js"><link rel="prefetch" href="/assets/js/4.c4fa1a91.js"><link rel="prefetch" href="/assets/js/5.7bcb5c47.js"><link rel="prefetch" href="/assets/js/6.907abdd2.js"><link rel="prefetch" href="/assets/js/7.7bb567a8.js"><link rel="prefetch" href="/assets/js/8.0c0bfda1.js"><link rel="prefetch" href="/assets/js/9.daf33eca.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.a070add0.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.337861c8.js" defer></script><script src="/assets/js/11.b69ec3bd.js" defer></script>
+    <script src="/assets/js/app.be6c14e5.js" defer></script><script src="/assets/js/11.b69ec3bd.js" defer></script>
   </body>
 </html>
